config: migrate database to postgre

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MisosoDb; TrustServerCertificate=True; Trusted_Connection=True;"
+    "DefaultConnection": "Host=localhost; port=5432; Username=postgres;Password=1q2w3e!@#;Database=MisosoDb"
   }
 }
