config: using user-secrets to save impontant crendentials locally

--- a/Misoso.Api.csproj
+++ b/Misoso.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1db2b3c1-a29c-44ee-a6a1-a4989eb2a289</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
