--- a/appsettings.json
+++ b/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "JwtOptions": {
-    "issuer": "Misoso.Api",
-    "audience": "Misoso.Api",
-    "secretKey": "1234567890qwertyuiop!@#$%^&*()_+"
-  }
+  "AllowedHosts": "*"
 }
